@@ -39,5 +39,5 @@ BUILT_SOURCES = rha_types.h rha_init.h rha_init.c
 CLEANFILES = rha_types.h rha_init.h rha_init.c
 rhabarber_LDADD += rha_init.o
 
-rha_types.h rha_init.h rha_init.c : rha_config.d
+rha_types.h rha_init.h rha_init.c : rha_config.d $(rhabarber_SOURCES)
 	@srcdir@/rha_config.pl
